--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=-236
+dock_split_2=-88
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=289
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Textures/", "res://Textures/Material/", "res://Scripts/", "res://addons/", "res://addons/addons/smoothing/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Textures/Material/", "res://addons/addons/smoothing/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,15 +29,16 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Scenes/player.tscn", "res://Scenes/test_level.tscn", "res://Scenes/debug_screen.tscn", "res://Scenes/settings.tscn", "res://Scenes/menu.tscn")
 center_split_offset=-256
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-current_scene="res://Scenes/player.tscn"
+current_scene="res://Scenes/test_level.tscn"
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/menu.gd", "res://Scripts/player.gd", "res://Scripts/settings.gd", "res://Scripts/test_level.gd"]
 selected_script="res://Scripts/player.gd"
-open_help=["@GlobalScope", "Input", "Node", "Node3D", "Object"]
+open_help=[]
 script_split_offset=150
 list_split_offset=0
 
