--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,10 +28,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/player.tscn", "res://Scenes/test_level.tscn", "res://Scenes/debug_screen.tscn", "res://Scenes/settings.tscn", "res://Scenes/menu.tscn")
-center_split_offset=-256
-selected_default_debugger_tab_idx=1
+center_split_offset=-286
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://Scenes/test_level.tscn"
+current_scene="res://Scenes/player.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
