--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -51,12 +51,12 @@ scripts=["ProjectSettings", "Object", "Node3D", "Node", "Input", "@GlobalScope",
 create_new_node=Rect2(2430, 190, 900, 700)
 project_settings=Rect2(2430, 190, 900, 700)
 search_help=Rect2(2400, 270, 960, 540)
-editor_settings=Rect2(2430, 190, 900, 700)
+editor_settings=Rect2(2582, 257, 900, 700)
 export=Rect2(2430, 190, 900, 729)
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.176419, 0.176419, 0.176419, 1, 0.994247, 0.697227, 0.784775, 0.5, 0.908855, 0.736597, 0.834092, 0.5, 0.917031, 0.740899, 0.781736, 0.5, 0.912435, 0.743557, 0.779642, 0.5, 0.913725, 0.745098, 0.780392, 1, 0.83006, 0.557147, 0.621051, 1, 0.931079, 0.481251, 0.619867, 1, 1, 0.509755, 0.945113, 1)
+recent_presets=PackedColorArray(0.11594, 0.163831, 0.211707, 1, 0.521569, 0.164706, 0.211765, 1, 0.521569, 0.596078, 0.211765, 1, 0.521569, 0.596078, 0.788235, 1, 1, 0.109804, 0.113725, 1, 1, 0.109804, 0.113725, 0.388235, 0.339461, 0, 0.00669826, 0.388235, 0, 0, 0, 0.388235, 0, 0, 0, 1)
 
 [texture_region_editor]
 
