--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 131,
-"folded_lines": Array[int]([]),
+"column": 48,
+"folded_lines": Array[int]([216, 223, 227, 233, 237, 241, 245]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 13.0,
+"row": 152,
+"scroll_position": 138.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -118,9 +118,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 13,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 12,
+"selection_to_column": 64,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
