--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 48,
-"folded_lines": Array[int]([216, 223, 227, 233, 237, 241, 245]),
+"column": 84,
+"folded_lines": Array[int]([227, 231, 237, 241, 246, 250]),
 "h_scroll_position": 0,
-"row": 152,
-"scroll_position": 138.0,
+"row": 88,
+"scroll_position": 80.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,16 +115,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 82,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 7,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 12,
-"selection_to_column": 64,
-"selection_to_line": 12,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -137,7 +133,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 28,
-"scroll_position": 3.0,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
