cleaned the code and Fixed bugs
Fixed:
	coyote time FIXED
	stuck between blocks FIXED

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/player.tscn", "res://Scenes/test_level.tscn", "res://Scenes/debug_screen.tscn", "res://Scenes/settings.tscn", "res://Scenes/menu.tscn")
-center_split_offset=-286
+center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 current_scene="res://Scenes/player.tscn"
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Scripts/menu.gd", "res://Scripts/player.gd", "res://Scripts/settings.gd", "res://Scripts/test_level.gd"]
 selected_script="res://Scripts/player.gd"
-open_help=[]
+open_help=["@GlobalScope"]
 script_split_offset=150
 list_split_offset=0
 
