--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
-"folded_lines": Array[int]([261, 268, 274, 278, 282, 286]),
+"column": 1,
+"folded_lines": Array[int]([323, 329, 333, 337, 341]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 0.0,
+"row": 195,
+"scroll_position": 180.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
