--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,13 +32,12 @@ center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 current_scene="res://Scenes/player.tscn"
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/menu.gd", "res://Scripts/player.gd", "res://Scripts/settings.gd", "res://Scripts/test_level.gd"]
 selected_script="res://Scripts/player.gd"
-open_help=["@GlobalScope", "RayCast3D"]
+open_help=["@GlobalScope", "float", "RayCast3D", "Transform3D", "Vector3"]
 script_split_offset=150
 list_split_offset=0
 
