--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=117
+dock_split_2=-104
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=289
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Textures/Material/", "res://addons/addons/smoothing/")
+dock_filesystem_selected_paths=PackedStringArray("res://Objects/Buildings/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Textures/", "res://Objects/", "res://addons/addons/smoothing/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -32,6 +32,7 @@ center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 current_scene="res://Scenes/player.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
