--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
-"folded_lines": Array[int]([323, 329, 333, 337, 341]),
-"h_scroll_position": 64,
-"row": 16,
-"scroll_position": 16.0,
+"column": 78,
+"folded_lines": Array[int]([319, 326, 332, 336, 340, 344]),
+"h_scroll_position": 0,
+"row": 235,
+"scroll_position": 146.25,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,10 +115,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 53,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 13,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
