--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=-104
+dock_split_2=46
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=289
-dock_hsplit_3=-255
+dock_hsplit_2=256
+dock_hsplit_3=-397
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Objects/Buildings/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Textures/", "res://Objects/", "res://addons/addons/smoothing/")
+dock_filesystem_selected_paths=PackedStringArray("res://Textures/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Textures/Material/", "res://Objects/", "res://addons/addons/smoothing/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,15 +30,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Scenes/player.tscn", "res://Scenes/test_level.tscn", "res://Scenes/debug_screen.tscn", "res://Scenes/settings.tscn", "res://Scenes/menu.tscn")
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 current_scene="res://Scenes/player.tscn"
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/menu.gd", "res://Scripts/player.gd", "res://Scripts/settings.gd", "res://Scripts/test_level.gd"]
 selected_script="res://Scripts/player.gd"
-open_help=["@GlobalScope", "float", "RayCast3D", "Transform3D", "Vector3"]
+open_help=[]
 script_split_offset=150
 list_split_offset=0
 
