--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Scripts/menu.gd", "res://Scripts/player.gd", "res://Scripts/settings.gd", "res://Scripts/test_level.gd"]
 selected_script="res://Scripts/player.gd"
-open_help=[]
+open_help=["ParallaxBackground"]
 script_split_offset=150
 list_split_offset=0
 
